<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".CreateProfileActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:text="@string/enter_details_prompt"/>

    <EditText
        android:id="@+id/create_profile_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/create_profile_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/create_profile_university"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/university"
        android:inputType="text"/>

    <EditText
        android:id="@+id/create_profile_campus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campus"
        android:inputType="text"/>

    <EditText
        android:id="@+id/create_profile_degree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/degree"
        android:inputType="text"/>

    <EditText
        android:id="@+id/create_profile_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bio"
        android:inputType="text"/>

    <Button
        android:id="@+id/create_profile_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>
</LinearLayout>