<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:background="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/activity_profile_events_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/events"/>

        <Button
            android:id="@+id/activity_profile_people_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/people"/>

        <Button
            android:id="@+id/activity_profile_maps_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/map"/>

        <Button
            android:id="@+id/activity_profile_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/profile"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>

</RelativeLayout>