<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/activity_main_people_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/people"/>

        <Button
            android:id="@+id/activity_main_map_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/map"/>

        <Button
            android:id="@+id/activity_main_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/profile"/>

    </LinearLayout>

</RelativeLayout>