<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MapsActivity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/people"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/map"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/profile"/>

    </LinearLayout>

</RelativeLayout>